// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c9 {
  box-sizing: border-box;
  margin-left: auto;
}

.c2 {
  box-sizing: border-box;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  overflow-y: auto;
  padding: 1rem;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-top: 1px solid;
  border-color: #e0e0e0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  margin: 0;
  color: #184480;
  font-weight: 500;
  line-height: 1.5;
}

.c4 {
  font-size: 1.125rem;
}

.c0 {
  position: fixed;
  z-index: -1;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 10001;
  top: 50%;
  left: 50%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 90vh;
  border-radius: 0.25rem;
  background-color: #fff;
  box-shadow: 0 10px 30px 0 rgba(17,17,17,0.2);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 416px;
}

.c11 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c10:focus {
  outline: 0;
}

.c10:disabled,
.c10[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c10::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c10 .c13 {
  cursor: pointer;
}

.c10 .c13 svg {
  fill: #1a1a1a;
}

.c10:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #3c5ad0;
  background-color: #3c5ad0;
  color: #ffffff;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  margin-left: 0.5rem;
}

.c12:focus {
  outline: 0;
}

.c12:disabled,
.c12[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c12::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c12 .c13 {
  cursor: pointer;
}

.c12 .c13 svg {
  fill: #ffffff;
}

.c12:hover {
  background-color: #ffffff;
  color: #3c5ad0;
}

.c12:hover .c13 svg {
  fill: #3c5ad0;
}

<body>
  <div />
  <div
    style="position: fixed; top: 0px; left: 0px; z-index: 9999;"
  >
    <div
      class="c0"
      style="opacity: 0;"
    />
    <div
      class="c1"
      style="opacity: 0;"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h3
            class="c4 c5"
          />
        </div>
      </div>
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <button
              class="c10"
              type="default"
            >
              Cancel
              <div
                class="c11"
              />
            </button>
            <button
              class="c12"
              type="primary"
            >
              Confirm
              <div
                class="c11"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal should render with props closable 1`] = `
<body>
  <div
    style="position: fixed; top: 0px; left: 0px; z-index: 9999;"
  />
  <div />
  .c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c14 {
  box-sizing: border-box;
  margin-left: auto;
}

.c2 {
  box-sizing: border-box;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  box-sizing: border-box;
  overflow-y: auto;
  padding: 1rem;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  box-sizing: border-box;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-top: 1px solid;
  border-color: #e0e0e0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  margin: 0;
  color: #184480;
  font-weight: 500;
  line-height: 1.5;
}

.c4 {
  font-size: 1.125rem;
}

.c0 {
  position: fixed;
  z-index: -1;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 10001;
  top: 50%;
  left: 50%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 90vh;
  border-radius: 0.25rem;
  background-color: #fff;
  box-shadow: 0 10px 30px 0 rgba(17,17,17,0.2);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 416px;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0rem;
}

.c9 svg {
  fill: #3c5ad0;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c9.c9.c9 svg {
  width: 20px;
  height: 20px;
}

.c10 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c15:focus {
  outline: 0;
}

.c15:disabled,
.c15[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c15::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c15 .c8 {
  cursor: pointer;
}

.c15 .c8 svg {
  fill: #1a1a1a;
}

.c15:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #3c5ad0;
  background-color: #3c5ad0;
  color: #ffffff;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  margin-left: 0.5rem;
}

.c16:focus {
  outline: 0;
}

.c16:disabled,
.c16[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c16::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c16 .c8 {
  cursor: pointer;
}

.c16 .c8 svg {
  fill: #ffffff;
}

.c16:hover {
  background-color: #ffffff;
  color: #3c5ad0;
}

.c16:hover .c8 svg {
  fill: #3c5ad0;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 999px;
  width: 2rem;
  height: 2rem;
  border-color: transparent;
  background-color: transparent;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c7:focus {
  outline: 0;
}

.c7:disabled,
.c7[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c7::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c7 .c8 {
  cursor: pointer;
}

.c7 .c8 svg {
  fill: #1a1a1a;
}

.c7:hover {
  border-color: transparent;
  background-color: #e0e0e0;
}

.c6 {
  background: transparent;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.c6:hover {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

<div
    style="position: fixed; top: 0px; left: 0px; z-index: 9999;"
  >
    <div
      class="c0"
      style="opacity: 0;"
    />
    <div
      class="c1"
      style="opacity: 0;"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h3
            class="c4 c5"
          />
        </div>
        <div
          class="c6"
        >
          <button
            class="c7"
            type="default"
          >
            <i
              class="c8 c9"
              cursor="default"
              style="pointer-events: none;"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </i>
            <div
              class="c10"
            />
          </button>
        </div>
      </div>
      <div
        class="c11"
      />
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <div
            class="c14"
          >
            <button
              class="c15"
              type="default"
            >
              Cancel
              <div
                class="c10"
              />
            </button>
            <button
              class="c16"
              type="primary"
            >
              Confirm
              <div
                class="c10"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
